--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Roboto+Slab:wght@100..900&display=swap');
+
 @import "tailwindcss";
+
 
 :root {
   background-color: #E3D5B8;
-
-  /* font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
 }
+
+@theme{
+  --font-Title: "Crimson Pro", "serif";
+  --font-Content: "Roboto Slab", "sans-serif";
+
+  --color-Crimson: #C33740;
+  --color-Dark-Gray: #4A4A4A;
+  --color-Beige: #F5F5DC;
+  --color-Linen: #E3D5B8;
+  --color-Light-Brown: #D7A278;
+  --color-Saddle-Brown: #8B4513;
+  --color-Dark-Chocolate: #69433A;
+  --color-Teal-Blue: #679499;
+}
+
 /* 
 
 a {
