--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Roboto+Slab:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,200..900;1,200..900&family=Roboto+Slab:wght@100..900&family=Special+Elite&display=swap');
+
 
 @import "tailwindcss";
 
@@ -10,6 +11,7 @@
 @theme{
   --font-Title: "Crimson Pro", "serif";
   --font-Content: "Roboto Slab", "sans-serif";
+  --font-Special: "Special Elite", "sans-serif";
 
   --color-Crimson: #C33740;
   --color-Dark-Gray: #4A4A4A;
